[package]
name = "journeys-mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json","rustls-tls-webpki-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}