[package]
name = "journeys-mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json","rustls-tls-webpki-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
chrono = {version = "0.4.38"}
regex = "1.10.5"
geo = "0.28.0"
geojson = "0.24.1"